force-app/main/default/objects/Batch_Tracker__c/Batch_Tracker__c.object-meta.xml
<CustomObject>
    <description>This object will active the batch in the org in batch center</description>
    <label>Batch Tracker</label>
    <nameField>
        <label>Batch Tracker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batch Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>