force-app/main/default/objects/Batch_Tracker__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Define if the batch is active for the process or not</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>