force-app/main/default/objects/Batch_Tracker__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Holds the end date that we want to run the batch for</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>