force-app/main/default/objects/Batch_Tracker__c/fields/End_Date_Field__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Field__c</fullName>
    <description>Holds the end date field will be set to run the batch</description>
    <label>End Date Field</label>
    <length>150</length>
    <type>Text</type>
</CustomField>