force-app/main/default/objects/Batch_Tracker__c/fields/Record_Identifier_Field__c.field-meta.xml
<CustomField>
    <fullName>Record_Identifier_Field__c</fullName>
    <description>This field will be used to re run the batch for specific records in the org</description>
    <inlineHelpText>This field will be used to re run the batch for specific records in the org</inlineHelpText>
    <label>Record Identifier Field</label>
    <length>150</length>
    <type>Text</type>
</CustomField>