force-app/main/default/objects/Batch_Tracker__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Holds the starting date when we want to start the batch</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>