force-app/main/default/objects/Batch_Tracker__c/fields/Start_Date_Field__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Field__c</fullName>
    <description>Holds the field used as start date to run the batch</description>
    <label>Start Date Field</label>
    <length>150</length>
    <type>Text</type>
</CustomField>